--- a/src/main.css
+++ b/src/main.css
@@ -7166,34 +7166,58 @@ html, body {
   html #root, body #root {
     height: 100%; }
     html #root .app, body #root .app {
-      height: 100%; }
+      height: 100%;
+      text-align: center; }
+      html #root .app h1, body #root .app h1 {
+        font-size: 8vw;
+        margin: 2vw 0 3vw;
+        text-align: center; }
+        @media (min-width: 100vh) {
+          html #root .app h1, body #root .app h1 {
+            font-size: 8vh;
+            margin: 2vh 0 3vh; } }
+      html #root .app .new-game-button, body #root .app .new-game-button {
+        background: none;
+        border: black solid 0.25vw;
+        font-size: 2.5vw;
+        margin: 0 0 4vw 0.5vw;
+        padding: 1vw 5vw; }
+        html #root .app .new-game-button:focus, body #root .app .new-game-button:focus {
+          outline: none; }
+        @media (min-width: 100vh) {
+          html #root .app .new-game-button, body #root .app .new-game-button {
+            border: black solid 0.25vh;
+            font-size: 2.5vh;
+            margin: 0 0 4vh 0.5vh;
+            padding: 1vh 5vh; } }
 
 .tic-tac-toe-board-container {
   height: 100%;
-  max-width: 100vw;
-  max-height: 100vw;
+  margin: 0 auto;
+  max-width: 69vw;
+  max-height: 69vw;
   width: 100%; }
   .tic-tac-toe-board-container .tic-tac-toe-board {
     height: 100%;
     margin: 0 auto;
-    max-width: 100vh;
-    max-height: 100vh;
+    max-width: 69vh;
+    max-height: 69vh;
     width: 100%; }
     .tic-tac-toe-board-container .tic-tac-toe-board .row {
       height: 33.333%;
       margin: 0; }
       .tic-tac-toe-board-container .tic-tac-toe-board .row.ttt-row-0, .tic-tac-toe-board-container .tic-tac-toe-board .row.ttt-row-1 {
-        border-bottom: black solid 1vw;
+        border-bottom: black solid 0.75vw;
         height: calc(33.333% + 0.25vw); }
         @media (min-width: 100vh) {
           .tic-tac-toe-board-container .tic-tac-toe-board .row.ttt-row-0, .tic-tac-toe-board-container .tic-tac-toe-board .row.ttt-row-1 {
-            border-bottom: black solid 1vh; } }
+            border-bottom: black solid 0.75vh; } }
       .tic-tac-toe-board-container .tic-tac-toe-board .row.ttt-row-2 {
         height: calc(33.333% - 0.5vw); }
 
 .tic-tac-toe-tile {
-  font-size: 30vw;
-  line-height: 33vw;
+  font-size: 19vw;
+  line-height: 22.6vw;
   margin: auto 0;
   text-align: center;
   width: 33.333%; }
@@ -7202,11 +7226,11 @@ html, body {
   .tic-tac-toe-tile.ttt-O {
     color: black; }
   .tic-tac-toe-tile.ttt-col-1, .tic-tac-toe-tile.ttt-col-2 {
-    border-left: black solid 1vw; }
+    border-left: black solid 0.75vw; }
     @media (min-width: 100vh) {
       .tic-tac-toe-tile.ttt-col-1, .tic-tac-toe-tile.ttt-col-2 {
-        border-left: black solid 1vh; } }
+        border-left: black solid 0.75vh; } }
   @media (min-width: 100vh) {
     .tic-tac-toe-tile {
-      font-size: 30vh;
-      line-height: 33vh; } }
+      font-size: 19vh;
+      line-height: 22.6vh; } }
