--- a/src/scss/_app.scss
+++ b/src/scss/_app.scss
@@ -6,6 +6,37 @@ html, body {
 
 		.app {
 			height: 100%;
+			text-align: center;
+
+			h1 {
+				font-size: 8vw;
+				margin: 2vw 0 3vw;
+				text-align: center;
+
+				@media (min-width: 100vh) {
+					font-size: 8vh;
+					margin: 2vh 0 3vh;
+				}
+			}
+
+			.new-game-button {
+				background: none;
+				border: black solid 0.25vw;
+				font-size: 2.5vw;
+				margin: 0 0 4vw 0.5vw;
+				padding: 1vw 5vw;
+
+				&:focus {
+					outline: none;
+				}
+
+				@media (min-width: 100vh) {
+					border: black solid 0.25vh;
+					font-size: 2.5vh;
+					margin: 0 0 4vh 0.5vh;
+					padding: 1vh 5vh;
+				}
+			}
 		}
 	}
 }
