--- a/src/scss/components/_tictactoeboard.scss
+++ b/src/scss/components/_tictactoeboard.scss
@@ -1,14 +1,15 @@
 .tic-tac-toe-board-container {
 	height: 100%;
-	max-width: 100vw;
-	max-height: 100vw;
+	margin: 0 auto;
+	max-width: 69vw;
+	max-height: 69vw;
 	width: 100%;
 
 	.tic-tac-toe-board {
 		height: 100%;
 		margin: 0 auto;
-		max-width: 100vh;
-		max-height: 100vh;
+		max-width: 69vh;
+		max-height: 69vh;
 		width: 100%;
 
 		.row {
@@ -16,11 +17,11 @@
 			margin: 0;
 
 			&.ttt-row-0, &.ttt-row-1 {
-				border-bottom: black solid 1vw;
+				border-bottom: black solid 0.75vw;
 				height: calc(33.333% + 0.25vw);
 
 				@media (min-width: 100vh) {
-					border-bottom: black solid 1vh;
+					border-bottom: black solid 0.75vh;
 				}
 			}
 			
